# kedro-tutorial-using-spaceflight-case

./: README.md  pyproject.toml  requirements.txt  stats.json
conf/base/: catalog.yml
notebooks/: notebook1.ipynb
src/: requirements.txt
src/spaceflight_tutorial/: __init__.py  __main__.py
src/spaceflight_tutorial/pipelines/data_processing/: nodes.py  pipeline.py
src/spaceflight_tutorial/pipelines/data_science/: nodes.py  pipeline.py
